$Id: ChangeLog,v 1.150 2005/01/19 17:58:55 freckle Exp $

2005-01-19  Matthias Ringwald <mringwal@inf.ethz.ch> 

	* stdio.h, stdio_nut_wrapper.h, time.h: more fixes
	for cygwin compilation

	* timer.h, timer.c, event.c, msg.c: Made critical section
	of NuTimerStart shorter. Extracted ms to ticks
	conversion out of NutTimerStart as NutTimerMillisToTicks.
	Extra function NutTimerStartTicks. Adapted NutSleep
	and NutMsgQTimerCb to take benefit of this.
 	Improved critical section in NutEventPost.

2005-01-19  Matthias Ringwald <mringwal@inf.ethz.ch> 

	* unix_devs.c: added includes for cygwin compile.
	Implemented input flush (read with len = 0).
      
2004-01-13  Harald Kipp  <harald.kipp@egnite.de>

	* conf/net/net.nut: Added dependencies to avoid compilation
	of network parts for targets without network hardware.

	* net/netdebug.c: Removed type casts from previously converted
	printf formats to avoid compiler warnings.

	* os/timer.c, os/nutinit.c: Moved ms62_5 counter from timer.c
	to nutinit.c. On AVR platforms this makes sure, that the
	variable is located in internal RAM, because nutinit.c is
	the first module being linked. This fixes the wrong baudrate 
	bug for applications occupying all internal RAM. Not nice,
	but works. In addition some timer handling had been optimized.
	The volatile attribute of a pointer in NutTimerInsert() wasn't
	really required and had been removed. In NutTimerStop() the
	critical section had been reduced to improve interrupt
	performance of the whole system. More could be done here.


2005-01-10  Ole Reinhardt <ole.reinhardt@embedded-it.de>

	* include/arch/avr.h
	Included check if atof is just defined (needed by 
	new avr-libc versions on debian unstable)


2005-01-02  Harald Kipp  <harald.kipp@egnite.de>

	* net/tcpsm.c: Replaced unprotected calls to NutEventPostAsync()
	by late calls to NutEventPost(). This should fix the infrequent
	system halts/resets. The event to the transmitter waiting queue