@@ -33,6 +33,9 @@
 
 /*
  * $Log$
+ * Revision 1.5  2005/01/21 16:49:45  freckle
+ * Seperated calls to NutEventPostAsync between Threads and IRQs
+ *
  * Revision 1.4  2004/12/16 08:40:35  haraldkipp
  * Late increment fixes ICCAVR bug.
  *
@@ -138,7 +141,7 @@ static void Tx0Complete(void *arg)
         dcb->dcb_tx_idx++;
     } else {
         cbi(UCR, UDRIE);
-        NutEventPostAsync(&dcb->dcb_tx_rdy);
+        NutEventPostFromIRQ(&dcb->dcb_tx_rdy);
     }
 }
 
@@ -171,7 +174,7 @@ static void Tx1Complete(void *arg)
         dcb->dcb_tx_idx++;
     } else {
         cbi(UCSR1B, UDRIE);
-        NutEventPostAsync(&dcb->dcb_tx_rdy);
+        NutEventPostFromIRQ(&dcb->dcb_tx_rdy);
     }
 }
 
@@ -196,7 +199,7 @@ static void Rx0Complete(void *arg)
 
     dcb->dcb_rx_buf[dcb->dcb_rx_idx] = inp(UDR);
     if (dcb->dcb_rd_idx == dcb->dcb_rx_idx)
-        NutEventPostAsync(&dcb->dcb_rx_rdy);
+        NutEventPostFromIRQ(&dcb->dcb_rx_rdy);
     /* Late increment fixes ICCAVR bug on volatile variables. */
     dcb->dcb_rx_idx++;
 }
@@ -211,7 +214,7 @@ static void Rx1Complete(void *arg)
 
     dcb->dcb_rx_buf[dcb->dcb_rx_idx] = inp(UDR1);
     if (dcb->dcb_rd_idx == dcb->dcb_rx_idx)
-        NutEventPostAsync(&dcb->dcb_rx_rdy);
+        NutEventPostFromIRQ(&dcb->dcb_rx_rdy);
     /* Late increment fixes ICCAVR bug on volatile variables. */
     dcb->dcb_rx_idx++;
 }
