@@ -33,6 +33,9 @@
 
 /*
  * $Log$
+ * Revision 1.8  2005/01/21 16:49:46  freckle
+ * Seperated calls to NutEventPostAsync between Threads and IRQs
+ *
  * Revision 1.7  2004/12/16 08:40:35  haraldkipp
  * Late increment fixes ICCAVR bug.
  *
@@ -201,7 +204,7 @@ static void TwInterrupt(void *arg)
         }
 
         /* Wake up the application. */
-        NutEventPostAsync(&tw_mm_que);
+        NutEventPostFromIRQ(&tw_mm_que);
 
         /*
          * Send a stop condition. If we have a listener, generate
@@ -270,7 +273,7 @@ static void TwInterrupt(void *arg)
         tw_mr_siz = 0;
 
         /* Wake up the application. */
-        NutEventPostAsync(&tw_mm_que);
+        NutEventPostFromIRQ(&tw_mm_que);
 
         /*
          * Send a stop condition. If we have a listener, generate
@@ -377,7 +380,7 @@ static void TwInterrupt(void *arg)
          * must now setup the transmit buffer and re-enable the
          * interface.
          */
-        if (NutEventPostAsync(&tw_sr_que) == 0 || tw_sm_err) {
+        if (NutEventPostFromIRQ(&tw_sr_que) == 0 || tw_sm_err) {
             /*
              * If no one has been waiting on the queue, the application 
              * probably gave up waiting. So we continue on our own, either
@@ -444,7 +447,7 @@ static void TwInterrupt(void *arg)
      */
     case TW_ST_DATA_NACK:
     case TW_ST_LAST_DATA:
-        NutEventPostAsync(&tw_st_que);
+        NutEventPostFromIRQ(&tw_st_que);
 
         /* Transmit start condition, if a master transfer is waiting. */
         if (tw_mt_len || tw_mr_siz) {
@@ -466,9 +469,9 @@ static void TwInterrupt(void *arg)
         tw_if_bsy = 0;
         tw_mm_err = TWERR_BUS;
         tw_sm_err = TWERR_BUS;
-        NutEventPostAsync(&tw_sr_que);
-        NutEventPostAsync(&tw_st_que);
-        NutEventPostAsync(&tw_mm_que);
+        NutEventPostFromIRQ(&tw_sr_que);
+        NutEventPostFromIRQ(&tw_st_que);
+        NutEventPostFromIRQ(&tw_mm_que);
 #endif
         break;
     }
