@@ -33,6 +33,9 @@
 
 /*
  * $Log$
+ * Revision 1.7  2005/01/21 16:49:46  freckle
+ * Seperated calls to NutEventPostAsync between Threads and IRQs
+ *
  * Revision 1.6  2004/12/16 08:40:35  haraldkipp
  * Late increment fixes ICCAVR bug.
  *
@@ -110,7 +113,7 @@ static void TxComplete(void *arg)
     } else {
         ifs->if_tx_act = 0;
         dcb = dev->dev_dcb;
-        NutEventPostAsync(&dcb->dcb_tx_rdy);
+        NutEventPostFromIRQ(&dcb->dcb_tx_rdy);
     }
 }
 
@@ -137,7 +140,7 @@ static void RxComplete(void *arg)
 
     if (ifs->if_rd_idx == ifs->if_rx_idx) {
         dcb = dev->dev_dcb;
-        NutEventPostAsync(&dcb->dcb_rx_rdy);
+        NutEventPostFromIRQ(&dcb->dcb_rx_rdy);
     }
     /* Late increment fixes ICCAVR bug on volatile variables. */
     ifs->if_rx_idx++;
